force-app/main/default/objects/Abonnement__c/Abonnement__c.object-meta.xml
<CustomObject>
    <label>Abonnement</label>
    <nameField>
        <label>Nom Abonnement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Abonnements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>