force-app/main/default/objects/Abonnement__c/fields/CompteClient__c.field-meta.xml
<CustomField>
    <fullName>CompteClient__c</fullName>
    <label>Compte Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Abonnements</relationshipLabel>
    <relationshipName>Abonnements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>