force-app/main/default/objects/Abonnement__c/fields/ContratActif__c.field-meta.xml
<CustomField>
    <fullName>ContratActif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContratActif</label>
    <type>Checkbox</type>
</CustomField>