force-app/main/default/objects/Abonnement__c/fields/DateDesabonnement__c.field-meta.xml
<CustomField>
    <fullName>DateDesabonnement__c</fullName>
    <label>DateDesabonnement</label>
    <type>Date</type>
</CustomField>