force-app/main/default/objects/Abonnement__c/fields/DateFinContrat__c.field-meta.xml
<CustomField>
    <fullName>DateFinContrat__c</fullName>
    <label>DateFinContrat</label>
    <type>Date</type>
</CustomField>