force-app/main/default/objects/Abonnement__c/fields/DateFinEngagement__c.field-meta.xml
<CustomField>
    <fullName>DateFinEngagement__c</fullName>
    <label>DateFinEngagement</label>
    <type>Date</type>
</CustomField>