force-app/main/default/objects/Abonnement__c/fields/DateSouscription__c.field-meta.xml
<CustomField>
    <fullName>DateSouscription__c</fullName>
    <label>DateSouscription</label>
    <type>Date</type>
</CustomField>