force-app/main/default/objects/Abonnement__c/fields/LieuSouscription__c.field-meta.xml
<CustomField>
    <fullName>LieuSouscription__c</fullName>
    <label>LieuSouscription</label>
    <length>80</length>
    <type>Text</type>
</CustomField>