force-app/main/default/objects/Abonnement__c/fields/MotifFinContrat__c.field-meta.xml
<CustomField>
    <fullName>MotifFinContrat__c</fullName>
    <label>MotifFinContrat</label>
    <length>40</length>
    <type>Text</type>
</CustomField>