force-app/main/default/objects/Abonnement__c/fields/NbrContratsPayes__c.field-meta.xml
<CustomField>
    <fullName>NbrContratsPayes__c</fullName>
    <label>NbrContratsPayes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>