force-app/main/default/objects/Abonnement__c/fields/NumeroCarteUI__c.field-meta.xml
<CustomField>
    <fullName>NumeroCarteUI__c</fullName>
    <label>NumeroCarteUI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>