force-app/main/default/objects/Abonnement__c/fields/OffreSouscription__c.field-meta.xml
<CustomField>
    <fullName>OffreSouscription__c</fullName>
    <label>OffreSouscription</label>
    <length>3</length>
    <type>Text</type>
</CustomField>