force-app/main/default/objects/Abonnement__c/fields/PorteurEstPayeur__c.field-meta.xml
<CustomField>
    <fullName>PorteurEstPayeur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PorteurEstPayeur</label>
    <type>Checkbox</type>
</CustomField>