force-app/main/default/objects/Abonnement__c/fields/PorteurEstPayeurAbTiers__c.field-meta.xml
<CustomField>
    <fullName>PorteurEstPayeurAbTiers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Porteur UI est payeur Ab Tiers</label>
    <type>Checkbox</type>
</CustomField>