force-app/main/default/objects/Abonnement__c/fields/TarifAbonnement__c.field-meta.xml
<CustomField>
    <fullName>TarifAbonnement__c</fullName>
    <label>TarifAbonnement</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>