force-app/main/default/objects/Abonnement__c/fields/Tech_IdMonCompte__c.field-meta.xml
<CustomField>
    <fullName>Tech_IdMonCompte__c</fullName>
    <externalId>true</externalId>
    <label>Tech Id MonCompte</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>