force-app/main/default/objects/Abonnement__c/fields/TypeAbonnement__c.field-meta.xml
<CustomField>
    <fullName>TypeAbonnement__c</fullName>
    <label>TypeAbonnement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UI1</fullName>
            </value>
            <value>
                <fullName>UI2</fullName>
            </value>
            <value>
                <fullName>UI3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>