force-app/main/default/objects/Abonnement__c/fields/TypePaiement__c.field-meta.xml
<CustomField>
    <fullName>TypePaiement__c</fullName>
    <label>TypePaiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carte Bleu</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Espece</fullName>
            </value>
            <value>
                <fullName>Prelevement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>